add : hugging face cache

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - "8501:8501"
     env_file:
       - .env
-    environment:
-      - QDRANT_HOST=qdrant
-      - QDRANT_PORT=6333
+    volumes:
+      - huggingface-cache:/root/.cache/huggingface
+
+volumes:
+  huggingface-cache:
